<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_baseline_notes_24"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_checklist"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/title_checklist" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_about_app"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_about_app" />

</menu>