...
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="20.02.2022" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
...
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="Тестируем" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:maxLines="@integer/text_max_lines"
            android:paddingHorizontal="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:textColor="@color/black"
...
