<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.NotesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_notes" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_margin"
        android:theme="@style/Theme.NotesVsShoppingList"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/purple_200"
        app:borderWidth="@dimen/zero_size"
        app:elevation="@dimen/elevation_size"
        app:fabSize="normal"
        android:contentDescription="@string/add_note" />
</FrameLayout>